# turing-machine

./: .gitignore  CMakeLists.txt  README.md  app.cpp  app.hpp  defs.hpp  main.cpp
model/: turingmachine.cpp  turingmachine.hpp
ui/: drawobject.cpp  drawobject.hpp  fa_icons.hpp  imfilebrowser.h  manipulators.cpp  manipulators.hpp  render.cpp  render.hpp  serializer.cpp  serializer.hpp
